--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -353,16 +353,17 @@
             label: 'Quantidade de Chamados',
             data: [ticketConcluido, ticketEmAndamento, ticketAberto, ticketAguardandoInfoAdd],
             backgroundColor: [
-                'rgba(50,205,50)',
-                'rgba(255,255,0)',
-                'rgba(0,191,255)',
-                'rgba(220,20,60)'
+                '#28a745',
+                '#ffc107',
+                '#007bff',
+                '#dc3545'
             ],
             borderColor: [
-                'rgba(50,205,50)',
-                'rgba(255,255,0)',
-                'rgba(0,191,255)',
-                'rgba(220,20,60)'
+                '#28a745',
+                '#ffc107',
+                '#007bff',
+                '#dc3545',
+                '#dc3545'
             ],
             borderWidth: 2
         }]
