--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -274,7 +274,7 @@
                                     Gráfico de Chamados por Categoria
                                 </div>
                                 <div class="card-body">
-                                    <canvas id="myBarChart" width="100%" height="40"></canvas>
+                                    <canvas id="myRadarChart" style="width: 100%; height: 400px;"></canvas>
                                 </div>
                             </div>
                         </div>                        
@@ -337,129 +337,104 @@
     <script src="materialize/assets/demo/chart-bar-demo.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
         crossorigin="anonymous"></script>
-    <script src="materialize/js/materialize.table.js"></script>
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-    // Captura os valores dos elementos HTML
-    var ticketConcluido = parseInt(document.getElementById("ticket_concluido").textContent);
-    var ticketEmAndamento = parseInt(document.getElementById("ticket_andamento").textContent);
-    var ticketAberto = parseInt(document.getElementById("ticket_aberto").textContent);
-    var ticketAguardandoInfoAdd = parseInt(document.getElementById("ticket_aguardando_info").textContent);
-
-    // Dados para o gráfico de barras
-    var barChartData = {
-        labels: ['Concluído', 'Em Andamento', 'Aberto', 'Aguardando Informação'],
-        datasets: [{
-            label: 'Quantidade de Chamados',
-            data: [ticketConcluido, ticketEmAndamento, ticketAberto, ticketAguardandoInfoAdd],
-            backgroundColor: [
-                '#28a745',
-                '#ffc107',
-                '#007bff',
-                '#dc3545'
-            ],
-            borderColor: [
-                '#28a745',
-                '#ffc107',
-                '#007bff',
-                '#dc3545',
-                '#dc3545'
-            ],
-            borderWidth: 2
-        }]
-    };
-
-    // Configuração do gráfico de barras
-    var barChartConfig = {
-        type: 'bar',
-        data: barChartData,
-        options: {
-            responsive: true,
-            maintainAspectRatio: false,
-            plugins: {
-                legend: {
-                    display: true,
-                    position: 'top',
-                    labels: {
-                        color: '#333',
-                        font: {
-                            size: 14
-                        }
-                    }
-                },
-                title: {
-                    display: true,
-                    text: 'Análise de Chamados por Categoria',
-                    color: '#333',
-                    font: {
-                        size: 18
-                    }
-                },
-                tooltip: {
-                    enabled: true,
-                    backgroundColor: 'rgba(0,0,0,0.8)',
-                    titleFont: {
-                        size: 16
-                    },
-                    bodyFont: {
-                        size: 14
-                    },
-                    footerFont: {
-                        size: 12
-                    }
-                },
-                datalabels: {
-                    display: true,
-                    color: 'black',
-                    align: 'end',
-                    anchor: 'end',
-                    font: {
-                        size: 12
-                    }
-                }
-            },
-            scales: {
-                x: {
-                    grid: {
-                        display: false
-                    },
-                    title: {
-                        display: true,
-                        text: 'Categorias',
-                        color: '#333',
-                        font: {
-                            size: 14
-                        }
-                    }
-                },
-                y: {
-                    beginAtZero: true,
-                    ticks: {
-                        stepSize: 1,
-                        color: '#333',
-                        font: {
-                            size: 14
+    <script src="materialize/js/materialize.table.js"></script> 
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            // Captura os valores dos elementos HTML
+            var ticketConcluido = parseInt(document.getElementById("ticket_concluido").textContent);
+            var ticketEmAndamento = parseInt(document.getElementById("ticket_andamento").textContent);
+            var ticketAberto = parseInt(document.getElementById("ticket_aberto").textContent);
+            var ticketAguardandoInfoAdd = parseInt(document.getElementById("ticket_aguardando_info").textContent);
+    
+            // Dados para o gráfico de radar
+            var radarChartData = {
+                labels: ['Concluído', 'Em Andamento', 'Aberto', 'Aguardando Informação'],
+                datasets: [{
+                    label: 'Quantidade de Chamados',
+                    data: [ticketConcluido, ticketEmAndamento, ticketAberto, ticketAguardandoInfoAdd],
+                    backgroundColor: 'rgba(54, 162, 235, 0.2)',
+                    borderColor: 'rgba(54, 162, 235, 1)',
+                    pointBackgroundColor: 'rgba(54, 162, 235, 1)',
+                    pointBorderColor: '#fff',
+                    pointHoverBackgroundColor: '#fff',
+                    pointHoverBorderColor: 'rgba(54, 162, 235, 1)',
+                }]
+            };
+    
+            // Configuração do gráfico de radar
+            var radarChartConfig = {
+                type: 'radar',
+                data: radarChartData,
+                options: {
+                    responsive: true,
+                    maintainAspectRatio: false,
+                    plugins: {
+                        legend: {
+                            display: true,
+                            position: 'top',
+                            labels: {
+                                color: '#333',
+                                font: {
+                                    size: 14
+                                }
+                            }
+                        },
+                        title: {
+                            display: true,
+                            text: 'Análise de Chamados por Categoria',
+                            color: '#333',
+                            font: {
+                                size: 18
+                            }
+                        },
+                        tooltip: {
+                            enabled: true,
+                            backgroundColor: 'rgba(0,0,0,0.8)',
+                            titleFont: {
+                                size: 16
+                            },
+                            bodyFont: {
+                                size: 14
+                            },
+                            footerFont: {
+                                size: 12
+                            }
+                        },
+                        datalabels: {
+                            display: true,
+                            color: 'black',
+                            align: 'end',
+                            anchor: 'end',
+                            font: {
+                                size: 12
+                            }
                         }
                     },
-                    title: {
-                        display: true,
-                        text: 'Quantidade',
-                        color: '#333',
-                        font: {
-                            size: 14
+                    scale: {
+                        pointLabels: {
+                            fontSize: 14,
+                            fontColor: '#333'
+                        },
+                        ticks: {
+                            beginAtZero: true,
+                            stepSize: 1,
+                            color: '#333',
+                            font: {
+                                size: 14
+                            }
                         }
                     }
                 }
-            }
-        }
-    };
+            };
+    
+            // Inicialização do gráfico de radar
+            var ctxRadar = document.getElementById('myRadarChart').getContext('2d');
+            var myRadarChart = new Chart(ctxRadar, radarChartConfig);
+        });
+    
+    </script>
+    
 
-    // Inicialização do gráfico de barras
-    var ctxBar = document.getElementById('myBarChart').getContext('2d');
-    var myBarChart = new Chart(ctxBar, barChartConfig);
-});
-
-</script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
 
     <script>
