🔨 add delete de chamado

--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -352,12 +352,12 @@
                 datasets: [{
                     label: 'Quantidade de Chamados',
                     data: [ticketConcluido, ticketEmAndamento, ticketAberto, ticketAguardandoInfoAdd],
-                    backgroundColor: 'rgba(54, 162, 235, 0.2)',
-                    borderColor: 'rgba(54, 162, 235, 1)',
-                    pointBackgroundColor: 'rgba(54, 162, 235, 1)',
+                    backgroundColor: 'rgba(119, 3, 252, 0.2)',
+                    borderColor: 'rgba(119, 3, 252)',
+                    pointBackgroundColor: 'rgba(119, 3, 252)',
                     pointBorderColor: '#fff',
                     pointHoverBackgroundColor: '#fff',
-                    pointHoverBorderColor: 'rgba(54, 162, 235, 1)',
+                    pointHoverBorderColor: 'rgba(119, 3, 252)',
                 }]
             };
     
