--- a/src/main/resources/templates/ticket/detalhesChamados.html
+++ b/src/main/resources/templates/ticket/detalhesChamados.html
@@ -10,6 +10,8 @@
     <title>Detalhes do chamado</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         crossorigin="anonymous" />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <link type="text/css" rel="stylesheet" href="/materialize/css/materialize.index.css" media="screen,projection" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 
@@ -342,8 +344,7 @@
                         <div th:if="${chamado.status == 'aberto'}">
                             <form th:action="@{/update/{id}(id=${chamado.id})}" method="post">
                                 <input type="hidden" name="novoStatus" value="andamento" />
-                                <button type="submit" class="btn btn-primary"
-                                    style="background-color: rgb(0, 255, 132);">Atender</button>
+                                <button type="submit" class="btn btn-primary" >Atender</button>
                             </form>
                         </div>
                         <div th:if="${chamado.status == 'andamento'}">
@@ -357,7 +358,7 @@
                                             <input type="text" id="newRespoAdmin" name="newRespoAdmin"
                                                 class="form-control" placeholder="Digite sua resposta">
                                             <div class="input-group-append">
-                                                <button type="submit" class="btn btn-success">Enviar</button>
+                                                <button type="submit" class="btn btn-primary">Enviar</button>
                                             </div>
                                         </div>
                                     </div>
@@ -539,7 +540,8 @@
                                     </div>
 
                                     <td>
-                                        <a th:href="@{/detalhes/{id}(id=${chamado.id})}">Analisar</a>
+                                        <a th:href="@{/detalhes/{id}(id=${chamado.id})}"> <i class="material-icons">search</i></a>
+                                        <a th:if="${isAdmin}" th:href="@{${(#mvc.url('SC#deleteChamado').arg(0,chamado.id)).build()}}" style="margin-left: 20px; color: red;"> <i class="material-icons">delete</i></a>
                                     </td>
 
                                 </tr>
