--- a/src/main/resources/templates/colaborador/consultarColaborador.html
+++ b/src/main/resources/templates/colaborador/consultarColaborador.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Cadastro de colaborador</title>
+    <title>Consultar colaboradores</title>
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
     <link type="text/css" rel="stylesheet" href="materialize/css/materialize.index.css" media="screen,projection" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
 <style>
     .main-colaborador {
-        background-color: #f8f9fa;
+        background-color: #f8f9fa; /* Cor de fundo mais suave */
         padding: 50px 0;
     }
 
@@ -35,11 +35,11 @@
     }
 
     .card h2 {
-        color: #007bff;
+        color: #007bff; /* Cor azul padrão do Bootstrap */
     }
 
     .card i {
-        color: #007bff;
+        color: #007bff; /* Cor azul para ícones */
     }
 
     .card-body {
@@ -57,14 +57,21 @@
     }
 </style>
 
+
+
 <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+        <!-- Navbar Brand-->
         <a class="navbar-brand ps-3" href="/principal">DEMO</a>
+        <!-- Sidebar Toggle-->
         <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i
                 class="fas fa-bars"></i></button>
+        <!-- Navbar Search-->
         <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0" th:if="${isAuthenticated}">
             <i class="fas fa-user"></i> <span th:text="${userEmail}" style="color: white;"></span>
+
         </form>
+        <!-- Navbar-->
         <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown"
@@ -77,6 +84,7 @@
                         </li>
                         <li><button class="dropdown-item" type="submit">Sair</button></li>
                     </form>
+
                 </ul>
             </li>
         </ul>
@@ -114,8 +122,8 @@
                                         style="margin-right: 10px;"></i>Consultar chamado</a>
                             </nav>
                         </div>
-                        <a th:if="${isAdmin}" class="nav-link collapsed" href="#" data-bs-toggle="collapse"
-                            data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
+                        <a th:if="${isAdmin}" class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages"
+                            aria-expanded="false" aria-controls="collapsePages">
                             <div th:if="${isAdmin}" class="sb-nav-link-icon"><i class="fa-solid fa-clipboard-user"
                                     style="margin-right: 10px;"></i></div>
                             Gerenciamento
@@ -141,9 +149,9 @@
                                     style="margin-right: 5px;"></i></div>
                             Tables
                         </a>
-                        <div th:if="${isAdmin}" class="sb-sidenav-menu-heading">Administrador</div>
+                        <div th:if="${isAdmin}" class="sb-sidenav-menu-heading">Admistrador</div>
                         <a th:if="${isAdmin}" class="nav-link" href="tables.html">
-                            <div class="sb-nav-link-icon"><i class="fa-solid fa-users" style="margin-right: 5px;"></i>
+                            <div th:if="${isAdmin}" class="sb-nav-link-icon"><i class="fa-solid fa-users" style="margin-right: 5px;"></i>
                             </div>
                             Gerenciamento user
                         </a>
@@ -157,28 +165,15 @@
         </div>
         <div id="layoutSidenav_content" style="background-color: #f8f9fa;">
             <main class="main-colaborador">
-                <div class="container">
-                    <!-- cadastroUsuario.html -->
-                    <form th:action="@{/criarColaboradores/salvar}" method="post">
-                        <!-- Campos para dados do usuário -->
-                        <label>Email:</label>
-                        <input type="email" name="email" required />
-                    
-                        <label>Senha:</label>
-                        <input type="password" name="senha" required />
-                    
-                        <!-- Campo para seleção do tipo de perfil -->
-                        <label>Tipo de Perfil:</label>
-                        <select name="perfilTipo" required>
-                            <option value="ADMIN">Admin</option>
-                            <option value="COLABORADOR">Colaborador</option>
-                            <!-- Adicione outras opções conforme necessário -->
-                        </select>
-                    
-                        <button type="submit">Cadastrar</button>
-                    </form>
-                    
+                <div th:each="colaborador : ${colaboradores}">
+                    <div th:text="${colaborador.nome}">Nome do Colaborador</div>
+                    <div th:text="${colaborador.cargo}">Cargo do Colaborador</div>
+                    <div th:text="${colaborador.dataNascimento}" class="data-nascimento"></div> 
+                    <div th:text="${colaborador.regiao}">Região do Colaborador</div>
+                    <div th:text="${colaborador.salario}">Salário do Colaborador</div>
                 </div>
+            </main>
+            <main th:if="${isAdmin}">
             </main>
             <footer class="py-4 bg-light mt-auto">
                 <div class="container-fluid px-4">
@@ -203,6 +198,8 @@
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
         crossorigin="anonymous"></script>
     <script src="materialize/js/materialize.table.js"></script>
+
+
 </body>
 
 </html>
