--- a/src/main/resources/templates/colaborador/cadastroColaborador.html
+++ b/src/main/resources/templates/colaborador/cadastroColaborador.html
@@ -174,6 +174,18 @@
                             <option value="COLABORADOR">Colaborador</option>
                             <!-- Adicione outras opções conforme necessário -->
                         </select>
+
+                        <label>nome:</label>
+                        <input type="text" name="nome" required />
+                        <label>cargo:</label>
+                        <input type="text" name="cargo" required />
+                        <label>data:</label>
+                        <input type="date" name="dataNascimento" required />
+                        <label>salario:</label>
+                        <input type="number" name="salario" required />
+                        <label>regiao:</label>
+                        <input type="text" name="regiao" required />
+
                     
                         <button type="submit">Cadastrar</button>
                     </form>
