✅ implementado controller post cadastro de colaborador ALL info

--- a/src/main/resources/templates/colaborador/cadastroColaborador.html
+++ b/src/main/resources/templates/colaborador/cadastroColaborador.html
@@ -185,6 +185,28 @@
                         <input type="number" name="salario" required />
                         <label>regiao:</label>
                         <input type="text" name="regiao" required />
+                        <label>cpf:</label>
+                        <input type="number" name="cpf" required />
+                        <label>telefone:</label>
+                        <input type="text" name="telefone" required />
+                        <label>rg:</label>
+                        <input type="text" name="rg" required />
+                        <label>sobrenome:</label>
+                        <input type="text" name="sobrenome" required />
+                        <label>logradouro:</label>
+                        <input type="text" name="logradouro" required />
+                        <label>cidade:</label>
+                        <input type="text" name="cidade" required />
+                        <label>estado:</label>
+                        <input type="text" name="estado" required />
+                        <label>bairro:</label>
+                        <input type="text" name="bairro" required />
+                        <label>rua:</label>
+                        <input type="text" name="rua" required />
+                        <label>numero:</label>
+                        <input type="text" name="numero" required />
+                        <label>cep:</label>
+                        <input type="text" name="cep" required />
 
                     
                         <button type="submit">Cadastrar</button>
