--- a/src/main/resources/templates/colaborador/cadastroColaborador.html
+++ b/src/main/resources/templates/colaborador/cadastroColaborador.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,6 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
     <link type="text/css" rel="stylesheet" href="materialize/css/materialize.index.css" media="screen,projection" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <style>
     .main-colaborador {
@@ -54,6 +55,20 @@
         background-color: #ffffff;
         border-radius: 5px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .endereco-section {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .endereco-section .form-group {
+        flex: 0 0 48%;
+        margin-right: 2%;
+    }
+
+    .endereco-section .form-group:nth-child(2n) {
+        margin-right: 0;
     }
 </style>
 
@@ -159,59 +174,98 @@
             <main class="main-colaborador">
                 <div class="container">
                     <!-- cadastroUsuario.html -->
-                    <form th:action="@{/criarColaboradores/salvar}" method="post">
-                        <!-- Campos para dados do usuário -->
-                        <label>Email:</label>
-                        <input type="email" name="email" required />
-                    
-                        <label>Senha:</label>
-                        <input type="password" name="senha" required />
-                    
-                        <!-- Campo para seleção do tipo de perfil -->
-                        <label>Tipo de Perfil:</label>
-                        <select name="perfilTipo" required>
-                            <option value="ADMIN">Admin</option>
-                            <option value="COLABORADOR">Colaborador</option>
-                            <!-- Adicione outras opções conforme necessário -->
-                        </select>
-
-                        <label>nome:</label>
-                        <input type="text" name="nome" required />
-                        <label>cargo:</label>
-                        <input type="text" name="cargo" required />
-                        <label>data:</label>
-                        <input type="date" name="dataNascimento" required />
-                        <label>salario:</label>
-                        <input type="number" name="salario" required />
-                        <label>regiao:</label>
-                        <input type="text" name="regiao" required />
-                        <label>cpf:</label>
-                        <input type="number" name="cpf" required />
-                        <label>telefone:</label>
-                        <input type="text" name="telefone" required />
-                        <label>rg:</label>
-                        <input type="text" name="rg" required />
-                        <label>sobrenome:</label>
-                        <input type="text" name="sobrenome" required />
-                        <label>logradouro:</label>
-                        <input type="text" name="logradouro" required />
-                        <label>cidade:</label>
-                        <input type="text" name="cidade" required />
-                        <label>estado:</label>
-                        <input type="text" name="estado" required />
-                        <label>bairro:</label>
-                        <input type="text" name="bairro" required />
-                        <label>rua:</label>
-                        <input type="text" name="rua" required />
-                        <label>numero:</label>
-                        <input type="text" name="numero" required />
-                        <label>cep:</label>
-                        <input type="text" name="cep" required />
-
-                    
-                        <button type="submit">Cadastrar</button>
+                    <form th:action="@{/criarColaboradores/salvar}" method="post" class="row g-3">
+                        <div class="col-12">
+                            <h2>Informações Pessoais</h2>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="email" name="email" required />
+                        </div>
+                        <div class="col-md-6">
+                            <label for="senha" class="form-label">Senha</label>
+                            <input type="password" class="form-control" id="senha" name="senha" required />
+                        </div>
+                        <div class="col-md-6">
+                            <label for="perfilTipo" class="form-label">Perfil</label>
+                            <select class="form-select" id="perfilTipo" name="perfilTipo" required>
+                                <option value="ADMIN">Admin</option>
+                                <option value="COLABORADOR">Colaborador</option>
+                            </select>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="nome" class="form-label">Nome</label>
+                            <input type="text" class="form-control" id="nome" name="nome" required />
+                        </div>
+                        <div class="col-md-6">
+                            <label for="sobrenome" class="form-label">Sobrenome</label>
+                            <input type="text" class="form-control" id="sobrenome" name="sobrenome" required />
+                        </div>
+                        <div class="col-md-6">
+                            <label for="cargo" class="form-label">Cargo</label>
+                            <input type="text" class="form-control" id="cargo" name="cargo" required />
+                        </div>
+                        <div class="col-md-6">
+                            <label for="dataNascimento" class="form-label">Data de Nascimento</label>
+                            <input type="date" class="form-control" id="dataNascimento" name="dataNascimento" required />
+                        </div>
+                        <div class="col-md-6">
+                            <label for="salario" class="form-label">Salário</label>
+                            <input type="number" class="form-control" id="salario" name="salario" required />
+                        </div>
+                        <div class="col-md-6">
+                            <label for="regiao" class="form-label">Região</label>
+                            <input type="text" class="form-control" id="regiao" name="regiao" required />
+                        </div>
+                        <div class="col-md-6">
+                            <label for="cpf" class="form-label">CPF</label>
+                            <input type="number" class="form-control" id="cpf" name="cpf" required />
+                        </div>
+                        <div class="col-md-6">
+                            <label for="telefone" class="form-label">Telefone</label>
+                            <input type="text" class="form-control" id="telefone" name="telefone" required />
+                        </div>
+                        <div class="col-md-6">
+                            <label for="rg" class="form-label">RG</label>
+                            <input type="text" class="form-control" id="rg" name="rg" required />
+                        </div>
+                        <div class="col-12">
+                            <h2>Endereço</h2>
+                        </div>
+                        <div class="col-12 endereco-section">
+                            <div class="form-group">
+                                <label for="logradouro" class="form-label">Logradouro</label>
+                                <input type="text" class="form-control" id="logradouro" name="logradouro" required />
+                            </div>
+                            <div class="form-group">
+                                <label for="estado" class="form-label">Estado</label>
+                                <input type="text" class="form-control" id="estado" name="estado" required />
+                            </div>
+                            <div class="form-group">
+                                <label for="cidade" class="form-label">Cidade</label>
+                                <input type="text" class="form-control" id="cidade" name="cidade" required />
+                            </div>
+                            <div class="form-group">
+                                <label for="bairro" class="form-label">Bairro</label>
+                                <input type="text" class="form-control" id="bairro" name="bairro" required />
+                            </div>
+                            <div class="form-group">
+                                <label for="rua" class="form-label">Rua</label>
+                                <input type="text" class="form-control" id="rua" name="rua" required />
+                            </div>
+                            <div class="form-group">
+                                <label for="numero" class="form-label">Número</label>
+                                <input type="text" class="form-control" id="numero" name="numero" required />
+                            </div>
+                            <div class="form-group">
+                                <label for="cep" class="form-label">CEP</label>
+                                <input type="text" class="form-control" id="cep" name="cep" required />
+                            </div>
+                        </div>
+                        <div class="col-12 text-center mt-4">
+                            <button type="submit" class="btn btn-primary">Cadastrar</button>
+                        </div>
                     </form>
-                    
                 </div>
             </main>
             <footer class="py-4 bg-light mt-auto">
